--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Spooky</title>
+  <script src="aframe-v0.7.1.js"> </script>
+<script src="aframe-animation-component.js"></script>
 
+
+</head>
+<body>
+
+<a-scene>
+<a-assets>
+
+</a-assets>
+<a-cone position="0 3.25 -1" radius="1" color="orange"></a-cone>
+<a-sphere position="1 0.75 1" radius="0.75" src="#ball"></a-sphere>
+<a-box position="-1 0.5 1" width="1" height="1" depth="1" src="#card"></a-box>
+<a-cylinder position="0 1.25 -1" radius="1" height="3"></a-cylinder>
+<a-plane width="20" height="20" rotation="-90 0 0" src="#grass"></a-plane>
+<a-sky src="#sky"></a-sky>
+<a-entity position="0 0 3.8">
+<a-camera></a-camera>
+</a-entity>
+</a-scene>
+</body>
+</html>
