--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a-assets>
 <img id="head" src="Head.jpg">
 </a-assets>
-<a-sphere position="1 0.75 1" radius="5" src="#head"></a-sphere>
+<a-plane width="20" height="20"src="#head"></a-plane>
 <a-plane width="20" height="20" rotation="-90 0 0" src="#grass"></a-plane>
 <a-sky color="#000000"></a-sky>
 <a-entity position="0 0 3.8">
