--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <a-scene>
 <a-assets>
-<img id="head" src="Head.jpg">
+<img id="head" src="Head.png">
 </a-assets>
-<a-plane width="20" height="20"src="#head"></a-plane>
+<a-plane position="0 5 0" width="20" height="20"src="#head"></a-plane>
 <a-plane width="20" height="20" rotation="-90 0 0" src="#grass"></a-plane>
 <a-sky color="#000000"></a-sky>
 <a-entity position="0 0 3.8">
