--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <a-scene>
 <a-assets>
-<img id="head" src="Head.png">
+<img id="head" src="Head.jpg">
 </a-assets>
 <a-plane position="0 5 0" width="20" height="20"src="#head"></a-plane>
 <a-plane width="20" height="20" rotation="-90 0 0" src="#grass"></a-plane>
