--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img id="head" src="Head.jpg">
 </a-assets>
 <a-plane position="0 5 0" width="20" height="20"src="#head"></a-plane>
-<a-plane width="20" height="20" rotation="-90 0 0" src="#grass"></a-plane>
+<a-plane width="20" height="20" rotation="-90 0 0" src="#000000"></a-plane>
 <a-sky color="#000000"></a-sky>
 <a-entity position="0 0 3.8">
 <a-camera></a-camera>
