--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <a-scene>
 <a-assets>
 <img id="head" src="Head.jpg">
+<audio id="sound" src="sound1"> </audio>
 </a-assets>
 <a-plane position="0 8.5 -6" width="20" height="20"src="#head"
 
 
 
 ></a-plane>
-<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0"></a-plane>
+<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0"></a-plane>
 <a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0"></a-plane>
 <a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0"></a-plane>
