--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
 <img id="head" src="Head.jpg">
 <audio id="sound" src="sound1"> </audio>
 </a-assets>
-<a-plane position="0 8.5 -6" width="20" height="20"src="#head"
-
-
-
-></a-plane>
+<a-plane position="0 8.5 -6" width="20" height="20"src="#head"></a-plane>
 <a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
-<a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0"></a-plane>
-<a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0"></a-plane>
-<a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0"></a-plane>
-<a-plane width="20" height="20" rotation="-90 0 0" color="#000000"></a-plane>
+<a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
+<a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
+<a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
+<a-plane width="20" height="20" rotation="-90 0 0" color="#000000" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 
 
 
