--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a-scene>
 <a-assets>
 <img id="head" src="Head.jpg">
-<audio id="sound" src="sound1..mp3"> </audio>
+<audio id="sound" src="sound1.mp3"> </audio>
 </a-assets>
 <a-plane position="0 8.5 -6" width="20" height="20"src="#head"></a-plane>
 <a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true" transparent; true></a-plane>
