--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <audio id="sound" src="sound1.mp3"> </audio>
 </a-assets>
 <a-plane position="0 8.5 -6" width="20" height="20"src="#head"></a-plane>
-<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true" transparent; true></a-plane>
+<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true" animation= attribute="rotation" dur="10000" fill="forwards" to="0 360 0" repeat="indefinite"></a-plane>
 <a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
