--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 <audio id="sound" src="sound1.mp3"> </audio>
 </a-assets>
 <a-plane position="0 8.5 -6" width="20" height="20"src="#head"></a-plane>
-<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"><a-animation attribute="rotation"
-                dur="10000"
+
+<a-plane>
+
+<a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
+                <a-animation attribute="rotation"
+                dur="100"
                 fill="forwards"
-                to="0 360 0"
+                to="0 180 0"
                 repeat="indefinite"></a-animation></a-plane>
+
 <a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
