--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 
 <a-plane>
 <a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
-                <a-animation attribute="rotation"
-                dur="10"
-                to="0 0 180"
-                repeat="indefinite"></a-animation></a-plane>
 
+            </a-plane>
+<a-plane>
 <a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
+
+<a-animation attribute="rotation"
+dur="10"
+to="0 0 180"
+repeat="indefinite"></a-animation>
+</a-plane>
 <a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane width="20" height="20" rotation="-90 0 0" color="#000000" sound="src: #sound; autoplay: true; loop: true"></a-plane>
