--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
 <a-plane position="0 18 3" width="20" height="20"src="#head" rotation="90 0 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 
             </a-plane>
-<a-plane>
-<a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 
-<a-animation attribute="rotation"
-dur="10"
-to="0 0 180"
-repeat="indefinite"></a-animation>
-</a-plane>
+<a-plane position="0 8.5 12" width="20" height="20"src="#head" rotation="0 -180 0" sound="src: #sound; autoplay: true; loop: true" animation="attribute: dur: 500;
+              loop: true; to: 180 0 0"></a-plane>
+
 <a-plane position="6.5 8.5 3" width="20" height="20"src="#head" rotation="0 -90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane position="-6.5 8.5 3" width="20" height="20"src="#head" rotation="0 90 0" sound="src: #sound; autoplay: true; loop: true"></a-plane>
 <a-plane width="20" height="20" rotation="-90 0 0" color="#000000" sound="src: #sound; autoplay: true; loop: true"></a-plane>
